objects/Akce__c/Akce__c.object-meta.xml
<CustomObject>
    <description>Konkrétní časově ohraničená akce či kampaň konaná v rámci některého z programů.</description>
    <label>Akce</label>
    <nameField>
        <label>Název akce</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Akce</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>