objects/Akce__c/fields/Kontakt_related__c.field-meta.xml
<CustomField>
    <fullName>Kontakt_related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Akce</relationshipLabel>
    <relationshipName>Akce</relationshipName>
    <type>Lookup</type>
</CustomField>