objects/Akce__c/fields/Kontakt_test_RL__c.field-meta.xml
<CustomField>
    <fullName>Kontakt_test_RL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontakt test RL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Akce (Kontakt test RL)</relationshipLabel>
    <relationshipName>Akce1</relationshipName>
    <type>Lookup</type>
</CustomField>