objects/Akce__c/listViews/Vsechny_akce.listView-meta.xml
<ListView>
    <fullName>Vsechny_akce</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Kontakt_related__c</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny akce</label>
    <language>en_US</language>
</ListView>